fix charts not showing regression

--- a/_assets/styles/core/_helper.scss
+++ b/_assets/styles/core/_helper.scss
@@ -6,7 +6,7 @@
   margin-bottom: 1rem;
 }
 
-.lazy:not(div,ul) {
+.lazy:not(div,ul,figure) {
   opacity: 0;
 }
 
